@@ -60,6 +60,7 @@ SVN trunk (1.1.1+svn):
    * tab completion now completes to smallest substring, and show possible
      completions
    * added whisper support for lobby and observers in game
+   * Added ignore list on MP
    
 Version 1.1.1:
  * campaigns
